// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should be invalid for bad platform 1`] = `
Object {
  "platform": "Expected a value of type \`\\"ios\\" | \\"android\\" | \\"boomstarter\\"\` for \`platform\` but received \`\\"windows\\"\`.",
}
`;

exports[`should be invalid for bad product 1`] = `
Object {
  "productId": "Value must be non-empty string",
}
`;
